Sun Dec 13 22:38:13 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          Changed to allow iPhone Hardware compiler to generate executables.

Sun Dec 13 18:30:26 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          Enhanced iPhone support. Now we can build for the iPhone
          Hardware target in addition to the simulator.

Sat Dec 12 15:40:13 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-iphone.h:
        * include/makeinclude/platform_macosx_iphone.GNU:

          First cut at supporting iPhone 3.1.2. These files need
          some cleanup. With these files, using the iPhone simulator
          I was able to spawn ACE Threads, print ACE Logs messages,
          and communicate between the the iPhone simulator and a
          Windows machine using CORBA.

Thu Dec 10 20:03:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Improved error message

Thu Dec 10 15:37:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACETAOCIAO.style:
          Small updates

Thu Dec 10 15:10:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check all run_*.pl files for fuzz

Thu Dec 10 13:07:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          Removed hard supported version check

Wed Dec  9 10:52:26 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * bin/fuzz.pl:

          Updated conditions for new framework

Mon Dec  7 16:09:18 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/Basic_Types_Test.cpp: Add a verification for the endianness
          setting.

Mon Dec  7 07:40:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/bmake.features:
          Disable mcpp for bmake
