@@ -1,3 +1,8 @@
+Mon Dec 14 10:58:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/Export/run_test.pl:
+          Fixed fuzz error
+
 Sun Dec 13 22:38:13 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>
 
         * include/makeinclude/platform_macosx_iphone.GNU:
